node-daemonsets.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"DaemonSet","apiVersion":"extensions/v1beta1","metadata":{"name":"node-exporter","namespace":"monitoring","creationTimestamp":null},"spec":{"template":{"metadata":{"name":"node-exporter","creationTimestamp":null,"labels":{"app":"node-exporter"},"annotations":{"prometheus.io/scrape":"true"}},"spec":{"containers":[{"name":"node-exporter","image":"prom/node-exporter:v0.13.0","ports":[{"name":"scrape","hostPort":9100,"containerPort":9100 [...]
  creationTimestamp: 2017-02-28T11:53:42Z
  generation: 1
  labels:
    app: node-exporter
  name: node-exporter
  namespace: monitoring
  resourceVersion: "32533831"
  selfLink: /apis/extensions/v1beta1/namespaces/monitoring/daemonsets/node-exporter
  uid: 8d3593d8-fdac-11e6-b1b2-005056ae6eff
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: node-exporter
      name: node-exporter
    spec:
      containers:
      - image: prom/node-exporter:v0.13.0
        imagePullPolicy: IfNotPresent
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      hostNetwork: true
      hostPID: true
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  currentNumberScheduled: 30
  desiredNumberScheduled: 30
  numberMisscheduled: 0
  numberReady: 30
