jmx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: cassandra-dc1
    environment: cat1
  name: jmx-exporter
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: jmx
    port: 7199
    targetPort: 7199
    protocol: TCP
  selector:
    app: cassandra-dc1
