prometheus-blackbox.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    app: blackbox-exporter
  template:
    metadata:
      name: blackbox-exporter
      labels:
        app: blackbox-exporter
    spec:
      containers:
      - image: ****/prometheus/blackbox-exporter:1.0
        name: blackbox
        ports:
        - containerPort: 9115
          name: blackbox

------
piVersion: v1
kind: Service
metadata:
  name: blackbox
  labels:
    name: blackbox
  annotations:
    prometheus.io/probe: "true"
spec:
  ports:
    - port: 9115 
      targetPort: blackbox
      protocol: TCP
  selector:
    name: prometheus
