prometheus-ing-dc2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "prometheus"
  namespace: monitoring
  labels:
    name: "prometheus"
spec:
  rules:
    -
      host: "prometheus.site.qa2.dc2.egaming.loro.swiss"
      http:
        paths:
          -
            path: "/"
            backend:
              serviceName: "prometheus"
              servicePort: 9090
